--- a/metodos_1.tex
+++ b/metodos_1.tex
@@ -39,7 +39,8 @@
 
 \noindent\textsc{Unidad acad\'emica:} Departamento de F\'isica
 
-\noindent\textsc{Prerrequisitos}: Introducci\'on a la Programaci\'on (ISIS-1221). \'Algebra Lineal I (MATE-1105).
+\noindent\textsc{Prerrequisitos}: Introducci\'on a la Programaci\'on
+(ISIS-1221). \'Algebra Lineal I (MATE-1105). 
 
 \noindent\textsc{Cr\'editos}: 3
 
@@ -106,13 +107,14 @@
 \noindent\normalsize Los m\'etodos computacionales son un aspecto
 inseparable de cualquier \'area de trabajo en ciencia e ingenier\'ia.
 Esto se debe a la facilidad de acceso a 
-computadoras programables  y al aumento exponencial en su capacidad de
+computadoras programables  y su aumento exponencial en capacidad de
 procesamiento.
-Esta diversificaci\'on de recursos para el c\'omputo s\'olo se puede aprovechar si 
-los  cient\'{\i}ficos son capaces de utilizar la tecnolog\'{\i}a
+Estos recursos para el c\'omputo s\'olo se puede aprovechar si las
+personas interesadas son capaces de utilizarlos tecnolog\'{\i}a
 de manera eficiente.
-Adem\'as, la obtenci\'on de resultados cient\'ificos 
-reproducibles requiere una comprensi\'on b\'asica de probabilidad y estad\'istica.
+Adem\'as, la obtenci\'on y comprensi\'on de los resultados obtenidos
+con m\'etodos computacionales va a requerir una comprensi\'on b\'asica
+de probabilidad y estad\'istica. 
 \\[0.1cm] 
 
 \stepcounter{mysection}
@@ -152,8 +154,7 @@ estudiante adquiera las siguientes habilidades.
   \item Resolver problemas de m\'inicos cuadrados, planteados desde el sistema de ecuaciones lineales correspondiente.
   \item Realizar reducci\'on de dimensionalidad de datos a trav\'es del m\'etodo de componentes principales.
  \end{itemize}
-\\[-0.6cm]   
-\item Usar herranientas de Python para an\'alisis estad\'istico de datos, para la soluci\'on de problemas en ciencias y otras \'areas.\\[-0.6cm]
+\item Usar herramientas de Python para an\'alisis estad\'istico de datos, para la soluci\'on de problemas en ciencias y otras \'areas.\\[-0.6cm]
 \begin{itemize}
    \item Implementar computacionalment modelos f\'isico--mat\'ematicos para el an\'alisis de datos utilizando \texttt{clases} y \texttt{funciones}.\\[-0.5cm]
    \item  Adoptar buenas pr\'acticas de escritura de c\'odigo para el desarrollo cont\'inuo de aplicaciones en ambientes colaborativos (comentarios, control de versiones, documentaci\'on).\\[-0.5cm]
@@ -162,7 +163,7 @@ estudiante adquiera las siguientes habilidades.
     columnas y normalizaci\'on.\\[-0.5cm]
    \item Utilizar la biblioteca \texttt{numpy} en la implementaci\'on de los algoritmos matem\'aticos que representen los diferentes sistemas en estudio.\\[-0.5cm]
     \item  Utilizar la biblioteca \texttt{matplotlib} para visualizar datos.\\[-0.5cm]
-\end{itemize}\\[-0.7cm]
+\end{itemize}
 \item Solucionar numéricamente problemas sencillos de cálculo diferencial, cálculo integral y álgebra lineal: cálculo de integrales, cálculo de derivadas sistemas de ecuaciones lineales, integraci\'on de funciones, problemas de valores propios. \\[-0.6cm]  
 
 \begin{itemize}
@@ -300,7 +301,7 @@ An\'alisis de Componentes Principales. \\[-0.6cm]
 %\vspace*{0.5cm} 
 %\stepcounter{mysection}
 %\noindent\textbf{\large \Roman{mysection} \quad
-  Metodolog\'ia}\\[-0.2cm] 
+%  Metodolog\'ia}\\[-0.2cm] 
 
 %El curso es de 3 cr\'editos que corresponden a 9 horas de dedicaci\'on.
 %Habr\'a $5$ horas presenciales distribu\'idas en $2\times 1.5$ horas de magistral 
