--- a/metodos_1.tex
+++ b/metodos_1.tex
@@ -112,24 +112,23 @@ procesamiento.
 Estos recursos para el c\'omputo s\'olo se puede aprovechar si las
 personas interesadas son capaces de utilizarlos tecnolog\'{\i}a
 de manera eficiente.
-Adem\'as, la obtenci\'on y comprensi\'on de los resultados obtenidos
-con m\'etodos computacionales va a requerir una comprensi\'on b\'asica
-de probabilidad y estad\'istica. 
-\\[0.1cm] 
+De manera complementaria, la obtenci\'on y comprensi\'on de los resultados obtenidos
+con estos m\'etodos computacionales requieren una comprensi\'on
+b\'asica de probabilidad y estad\'istica. \\[0.1cm] 
 
 \stepcounter{mysection}
 \noindent\textbf{\large \Roman{mysection} \quad Objetivos}\\[-0.2cm]
 
 %En este espacio se debe precisar el ente visor del curso y el
 %proposito ideal al finalizar el curso. 
-\noindent\normalsize El objetivo principal del curso es presentar
+\noindent\normalsize En el curso se presentan
 algoritmos y t\'ecnicas computacionales b\'asicas para:
 
 \begin{itemize}
-\item analizar y describir datos con m\'etodos estad\'isticos basadas
-  en m\'etodos Monte Carlo. \\[-0.6cm]
-\item resolver num\'ericamente problemas que involucren derivadas, integrales, sistemas de ecuaciones algebraicas, \\[-0.6cm]
-\item desarrollar esquemas reproducibles para el an\'alisis de datos cient\'ificos. \\[-0.6cm]
+\item analizar datos y modelos con conceptos probabil\'isticos y
+  m\'etodos estad\'isticos \\[-0.6cm] 
+\item resolver num\'ericamente problemas que involucren derivadas,
+  integrales y sistemas de ecuaciones algebraicas \\[-0.6cm]
 \end{itemize} 
 \vspace*{0.5cm} 
 
@@ -140,38 +139,66 @@ algoritmos y t\'ecnicas computacionales b\'asicas para:
 %En este espacio se describen las habilidades que el estudiante desarrollara en el transcurso del curso.
 
 \noindent\normalsize Al finalizar el curso, se espera que el
-estudiante adquiera las siguientes habilidades.
+estudiante adquiera las siguientes habilidades. 
 
 \begin{itemize}
-\item Realizar an\'aisis de datos usando apropiadamente conceptos b\'asicos de probabilidad y estad\'istica en la soluci\'on de problemas en ciencias y otras \'areas: variables aleatorias, valores esperados, funciones binomiales y multinomiales, m\'etodos de Monte-Carlo, pruebas de hip\'otesis:
+\item Analizar datos usando apropiadamente conceptos
+  b\'asicos de probabilidad y estad\'istica en la soluci\'on de
+  problemas en ciencias y otras \'areas: variables aleatorias, valores
+  esperados, funciones binomiales y multinomiales, m\'etodos de
+  Monte-Carlo, pruebas de hip\'otesis: 
  \begin{itemize}
-  \item Diferenciar distribuciones de probabilidad comunmente encontradas en ciencias: normal, poisson, log-normal, etc.
-  \item Hacer histogramas para identificar la distribuci\'on de los datos como funci\'on de una variable espec\'fica.
-  \item Estimar la moda, media, mediana, desviaci\'on estandar, curtosis y otros momentos de series de datos.
-  \item Realizar pruebas cuantitativas para ver si dos series de datos corresponden a la misma distribuci\'on de probabilidad.
-  \item Utilizar datos para proponer modelos param\'etricos y acotar los terminos libres de este. 
-  \item Solucionar sistemas de ecuaciones algebraicas lineales. 
-  \item Resolver problemas de m\'inicos cuadrados, planteados desde el sistema de ecuaciones lineales correspondiente.
-  \item Realizar reducci\'on de dimensionalidad de datos a trav\'es del m\'etodo de componentes principales.
+  \item Diferenciar distribuciones de probabilidad comunmente
+    encontradas en ciencias: normal, poisson, log-normal, etc. 
+  \item Hacer histogramas para identificar la distribuci\'on de los
+    datos como funci\'on de una variable espec\'ifica. 
+  \item Estimar la moda, media, mediana, desviaci\'on estandar,
+    curtosis y otros momentos de series de datos. 
+  \item Realizar pruebas cuantitativas para ver si dos series de datos
+    corresponden a la misma distribuci\'on de probabilidad. 
+  \item Utilizar datos para proponer modelos param\'etricos y acotar
+    los terminos libres de este.  
+  \item Solucionar sistemas de ecuaciones algebraicas lineales.  
+  \item Resolver problemas de m\'inimos cuadrados, planteados desde el
+    sistema de ecuaciones lineales correspondiente. 
+  \item Realizar reducci\'on de dimensionalidad de datos a trav\'es
+    del m\'etodo de componentes principales. 
  \end{itemize}
-\item Usar herramientas de Python para an\'alisis estad\'istico de datos, para la soluci\'on de problemas en ciencias y otras \'areas.\\[-0.6cm]
+\item Usar herramientas de Python para an\'alisis estad\'istico de
+  datos, para la soluci\'on de problemas en ciencias y otras
+  \'areas.\\[-0.6cm] 
 \begin{itemize}
-   \item Implementar computacionalment modelos f\'isico--mat\'ematicos para el an\'alisis de datos utilizando \texttt{clases} y \texttt{funciones}.\\[-0.5cm]
-   \item  Adoptar buenas pr\'acticas de escritura de c\'odigo para el desarrollo cont\'inuo de aplicaciones en ambientes colaborativos (comentarios, control de versiones, documentaci\'on).\\[-0.5cm]
+   \item Implementar computacionalment modelos f\'isico--mat\'ematicos
+     para el an\'alisis de datos utilizando \texttt{clases} y
+     \texttt{funciones}.\\[-0.5cm] 
     \item Utilizar de la biblioteca \texttt{pandas} para el manejo eficiente de los datos
-    teniendo en cuenta los siguientes procedimientos: preprocesamiento, re--formato de
-    columnas y normalizaci\'on.\\[-0.5cm]
-   \item Utilizar la biblioteca \texttt{numpy} en la implementaci\'on de los algoritmos matem\'aticos que representen los diferentes sistemas en estudio.\\[-0.5cm]
-    \item  Utilizar la biblioteca \texttt{matplotlib} para visualizar datos.\\[-0.5cm]
+    teniendo en cuenta los siguientes procedimientos: preprocesamiento, re-formato de
+    columnas y normalizaci\'on.\\[-0.5cm] 
+   \item Utilizar la biblioteca \texttt{numpy} en la implementaci\'on
+     de los algoritmos matem\'aticos que representen los diferentes
+     sistemas en estudio.\\[-0.5cm] 
+    \item  Utilizar la biblioteca \texttt{matplotlib} para visualizar
+      datos.\\[-0.5cm] 
 \end{itemize}
-\item Solucionar numéricamente problemas sencillos de cálculo diferencial, cálculo integral y álgebra lineal: cálculo de integrales, cálculo de derivadas sistemas de ecuaciones lineales, integraci\'on de funciones, problemas de valores propios. \\[-0.6cm]  
+
+\item Solucionar numéricamente problemas sencillos de cálculo
+  diferencial, cálculo integral y álgebra lineal: cálculo de
+  integrales, cálculo de derivadas sistemas de ecuaciones lineales,
+  integraci\'on de funciones, problemas de valores propios. \\[-0.6cm]   
 
 \begin{itemize}
-    \item Calcula num\'ericamente la primera y segunda derivada de funciones de una variable.
-    \item Calcula num\'ericamente integrales unidimensionales definidas e indefinidas con los m\'etodos siguientes: trapecio, newton-rhapson y cuadratura gaussiana.
-    \item Encuentra num\'ericamente la soluci\'on a sistemas de ecuaciones algebraicos lineales.
-    \item Utiliza bibliotecas de \'algebra lineal para calcular valores y vectores propios.
-    \item Interpreta los vectores y valores propios de una matriz de covarianza como herramientas para la reducci\'on de dimensionalidad de un conjunto de datos.
+    \item Calcula num\'ericamente la primera y segunda derivada de
+      funciones de una variable. 
+    \item Calcula num\'ericamente integrales unidimensionales
+      definidas e indefinidas con los m\'etodos siguientes: trapecio,
+      newton-rhapson y cuadratura gaussiana. 
+    \item Encuentra num\'ericamente la soluci\'on a sistemas de
+      ecuaciones algebraicos lineales. 
+    \item Utiliza bibliotecas de \'algebra lineal para calcular
+      valores y vectores propios. 
+    \item Interpreta los vectores y valores propios de una matriz de
+      covarianza como herramientas para la reducci\'on de
+      dimensionalidad de un conjunto de datos. 
 \end{itemize}
 \end{itemize}
 %de manera aut\'onoma la soluci\'on num\'erica a una variedad de fen\'omenos representados mediante ecuaciones diferenciales o distribuciones probabil\'{\i}sticas.
@@ -197,7 +224,7 @@ Repaso de la sintaxis b\'asica de Python. \\[-0.6cm]
 \noindent\textbf{\textsc{Semana 2}} \\[-0.5cm]
 \begin{itemize}
 \item Temas: 
-Repaso de lectura de archivos, graficas, funciones y objetos en Python \\[-0.6cm] 
+Repaso de lectura de archivos, gr\'aficas, funciones y objetos en Python \\[-0.6cm] 
 %\item Lecturas preparatorias: 
 \end{itemize}
 
@@ -277,8 +304,8 @@ Repaso de lectura de archivos, graficas, funciones y objetos en Python \\[-0.6cm
 
 \noindent\textbf{\textsc{Semana 14}}\\[-0.5cm]
 \begin{itemize}
-\item Temas: Soluci\'on de sistemas de ecuaciones lineales. Ajustes
-  por m\'inimos cuadrados. \\[-0.6cm] 
+\item Temas: Soluci\'on de sistemas de ecuaciones lineales. 
+\\[-0.6cm] 
 %\item Lecturas preparatorias:  Cap\'itulo 8 (Matrix Equation Solutions)
 %  del libro de Landau. \\[-0.6cm]
 \end{itemize}
@@ -286,15 +313,14 @@ Repaso de lectura de archivos, graficas, funciones y objetos en Python \\[-0.6cm
 
 \noindent\textbf{\textsc{Semana 15}}\\[-0.5cm]
 \begin{itemize}
-\item Temas: Autovalores y autovectores. 
-An\'alisis de Componentes Principales. \\[-0.6cm]
+\item Temas: Ajustes por m\'inimos cuadrados con m\'etodos matriciales. 
 %\item Lecturas preparatorias: Secciones 6.3.1 (Principal Component
 %  Regression) y 10.2 (Principal Component Analysis) del libro ISL.\\[-0.6cm]
 \end{itemize}
 
 \noindent\textbf{\textsc{Semana 16}}\\[-0.5cm]
 \begin{itemize}
-\item Temas. Campos Vectoriales. Derivadas parciales. Gradientes. Divergencia.\\[-0.6cm]  
+\item Temas: Autovalores y autovectores. An\'alisis de Componentes Principales. \\[-0.6cm]
 \end{itemize}
 
 
