--- a/metodos_1.tex
+++ b/metodos_1.tex
@@ -145,8 +145,7 @@ estudiante adquiera las siguientes habilidades.
 \item Analizar datos usando apropiadamente conceptos
   b\'asicos de probabilidad y estad\'istica en la soluci\'on de
   problemas en ciencias y otras \'areas: variables aleatorias, valores
-  esperados, funciones binomiales y multinomiales, m\'etodos de
-  Monte-Carlo, pruebas de hip\'otesis: 
+  esperados, m\'etodos de Monte-Carlo, pruebas de hip\'otesis: 
  \begin{itemize}
   \item Diferenciar distribuciones de probabilidad comunmente
     encontradas en ciencias: normal, poisson, log-normal, etc. 
@@ -183,7 +182,7 @@ estudiante adquiera las siguientes habilidades.
 
 \item Solucionar numéricamente problemas sencillos de cálculo
   diferencial, cálculo integral y álgebra lineal: cálculo de
-  integrales, cálculo de derivadas sistemas de ecuaciones lineales,
+  integrales, cálculo de derivadas, sistemas de ecuaciones lineales,
   integraci\'on de funciones, problemas de valores propios. \\[-0.6cm]   
 
 \begin{itemize}
@@ -230,55 +229,75 @@ Repaso de lectura de archivos, gr\'aficas, funciones y objetos en Python \\[-0.6
 
 \noindent\textbf{\textsc{Semana 3}}\\[-0.5cm]
 \begin{itemize}
-\item Temas:  Introducci\'on a la probabilidad I: Conceptos fundamentales, interpretaci\'on de probabilidad, funciones de densidad. \\[-0.6cm]
+\item Temas:  Introducci\'on a la probabilidad I: Conceptos
+  fundamentales, interpretaci\'on de probabilidad, funciones de
+  densidad. \\[-0.6cm] 
 %\item Lecturas preparatorias: \\[-0.6cm] 
 \end{itemize}
 
 \noindent\textbf{\textsc{Semana 4}}\\[-0.5cm]
 \begin{itemize}
-\item Temas:  Introducci\'on a la probabilidad II: funciones de variables aleatorias, valores esperados, propagaci\'on de errores, transformaci\'on ortogonal de variables aleatorias. \\[-0.6cm]
+\item Temas:  Introducci\'on a la probabilidad II: funciones de
+  variables aleatorias, valores esperados, propagaci\'on de errores
+  \\[-0.6cm] 
 %\item Lecturas preparatorias: \\[-0.6cm]    
 \end{itemize}
 
 \noindent\textbf{\textsc{Semana 5}}\\[-0.5cm]
 \begin{itemize}
-\item Temas: Funciones de probabilidad: Funciones binomiales y multinomiales, distribuci\'on de Poisson, distribuci\'on uniforme. Distribuciones exponenciales, gaussianas, normales-logaritmicas, chi-cuadrado. \\[-0.6cm]
+\item Temas: Funciones de probabilidad: Funciones binomiales y
+  multinomiales, distribuci\'on de Poisson, distribuci\'on
+  uniforme. Distribuciones exponenciales, gaussianas,
+  normales-logaritmicas, chi-cuadrado. \\[-0.6cm] 
 %\item Lecturas preparatorias: \\[-0.6cm]
 \end{itemize}
 
 
 \noindent\textbf{\textsc{Semana 6}}\\[-0.5cm]
 \begin{itemize}
-\item Temas:  M\'etodos de montecarlo: N\'umeros distribu\'idos aleatoriamente, el m\'etodo de transformaci\'on, m\'etodo de selecci\'on-rechazo. Metr\'opolis-Hastings. \\[-0.6cm]
+\item Temas:  M\'etodos de montecarlo: N\'umeros distribu\'idos
+  aleatoriamente, el m\'etodo de transformaci\'on, m\'etodo de
+  selecci\'on-rechazo. Metr\'opolis-Hastings. \\[-0.6cm] 
 %\item Lecturas preparatorias: \\[-0.6cm]  
 \end{itemize}
 
 
 \noindent\textbf{\textsc{Semana 7}}\\[-0.5cm]
 \begin{itemize}
-\item Temas: Pruebas estad\'isticas. Hip\'otesis, niveles de significancia. Ejemplo de construcci\'on de una prueba estad\'istica completa. Verificaci\'on de pruebas de ajuste. \\[-0.6cm]
+\item Temas: Pruebas estad\'isticas. Hip\'otesis, niveles de
+  significancia. Ejemplo de construcci\'on de una prueba estad\'istica
+  completa. Bootstrapping. \\[-0.6cm] 
 %\item Lecturas preparatorias:  \\[-0.6cm] 
 \end{itemize}
 
 \noindent\textbf{\textsc{Semana 8}}\\[-0.5cm]
 \begin{itemize}
-\item Temas: Conceptos b\'asicos sobre estimaci\'on de par\'ametros. Muestras, estimadores y sesgo estad\'istico. Estimadores para la media, varianza y covarianza de datos. \\[-0.6cm]
+\item Temas: Conceptos b\'asicos sobre estimaci\'on de
+  par\'ametros. Muestras, estimadores y sesgo
+  estad\'istico. Estimadores para la media, varianza y covarianza de
+  datos. \\[-0.6cm] 
 %\item Lecturas preparatorias: \\[-0.6cm] 
+\end{itemize}
+
+\noindent\textbf{\textsc{Semana 10}}\\[-0.5cm]
+\begin{itemize}
+\item Temas: Conceptos b\'asicos de estad\'istica
+  Bayesiana. 
+\\[-0.6cm]   
+%\item Lecturas preparatorias:\\[-0.6cm]
 \end{itemize}
 
 
 \noindent\textbf{\textsc{Semana 9}}\\[-0.5cm]
 \begin{itemize}
-\item Temas: An\'alisis con estimadores de m\'axima verosimilitud. Introducci\'on a estimadores de MV y ejemplos. Varianza de estimadores MV. MV Extendida, MV con datos segmentados. Combinaci\'on de mediciones con MV. \\[-0.6cm]
+\item Temas: 
+Estimaci\'on de par\'ametros con estad\'istica
+  bayesiana.  Estimadores de m\'axima verosimilitud. 
+\\[-0.6cm] 
 %\item Lecturas preparatorias:
 \\[-0.6cm]
 \end{itemize}
 
-\noindent\textbf{\textsc{Semana 10}}\\[-0.5cm]
-\begin{itemize}
-\item Temas: Conceptos b\'asicos de estad\'istica Bayesiana. Estimaci\'on de par\'ametros con estad\'istica bayesiana. \\[-0.6cm]  
-%\item Lecturas preparatorias:\\[-0.6cm]
-\end{itemize}
 
 
 \noindent\textbf{\textsc{Semana 11}}\\[-0.5cm]
@@ -398,9 +417,14 @@ Repaso de lectura de archivos, gr\'aficas, funciones y objetos en Python \\[-0.6
 \noindent\normalsize Bibliograf\'ia principal:
 
 \begin{itemize}
+
 \item
-\textit{Software Carpentry: Python Testing}
-\url{http://katyhuff.github.io/python-testing/}
+\textit{Introduction to statistics with python}.
+Thomas Haslwanter.  Springer. 2016.
+
+\item 
+\textit{Pattern recognition and Machine Learning}.
+Christopher Bishop. Springer. 2011.
 
 \item
 \textit{A survey of Computational Physics - Enlarged Python Book}
